# myext2

./: CMakeLists.txt  diskfile  main.c
data/: diskoperations.c  diskoperations.h  fileoperations.c  fileoperations.h
include/: head.h
init/: initdisk.c  initdisk.h  initmemory.c  initmemory.h  inittask.c  inittask.h
operations/: bitmap.c  bitmap.h  inode.c  inode.h  namei.c  namei.h  super.c  super.h
